fix: remove script from footer svg

--- a/src/components/site/Footer.astro
+++ b/src/components/site/Footer.astro
@@ -13,8 +13,7 @@ const today = new Date();
         <svg xmlns="http://www.w3.org/2000/svg" width="640" height="944" viewBox="0 0 640 944" fill="none">
             <g clip-path="url(#clip0_20_14025)">
             <path d="M362.245 0.000229527C455.485 535.279 113.669 929.157 24.1779 722.483C-47.0426 558.005 490.275 534.875 616.912 944.633" stroke="inherit" stroke-width="18.8441"/>
-            </g>
-            <script xmlns="" id="bw-fido2-page-script"/></svg>
+            </g></svg>
     </div>
   <div class="mx-auto max-w-screen-xl text-center z-10 relative">
       <a href="/" class="">
