--- a/src/components/site/Header.astro
+++ b/src/components/site/Header.astro
@@ -6,7 +6,7 @@ import Alert from '../../components/ui/Alert.astro';
 // Content
 import logo from '../../assets/images/logo.svg?raw';
 import logoDark from '../../assets/images/logo-white.svg?raw';
-import { Astronav, MenuItems, MenuIcon, Dropdown, DropdownItems, DropdownSubmenu } from "astro-navbar";
+import { Astronav, MenuItems, MenuIcon } from "astro-navbar";
 
 ---
 
