update header style

--- a/src/components/content/HomeServices2.astro
+++ b/src/components/content/HomeServices2.astro
@@ -8,44 +8,44 @@ import { Icon } from "astro-icon/components";
           <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-stone-900 dark:text-white">Trusted services.</h2>
           <p class="text-stone-500 sm:text-xl dark:text-stone-400">We've done it all, from the largest luxury homes in the city to condos and everything in between. If designers in <a href="https://springsparade.com/web/" target="_blank" rel="noreferrer noopener" class="text-red-800 underline hover:text-red-600">the Parade of Homes</a> trust us, you can too.</p>
       </div>
-      <div class="space-y-8 md:grid md:grid-cols-2 lg:grid-cols-3 md:gap-12 md:space-y-0">
+      <div class="space-y-8 md:grid md:grid-cols-2 lg:grid-cols-3 md:gap-12 md:space-y-0 max-sm:text-center">
           <div>
-              <div class="flex justify-center items-center mb-4 w-10 h-10 rounded-full bg-red-100 lg:h-12 lg:w-12 dark:bg-red-900">
+              <div class="max-sm:mx-auto flex justify-center items-center mb-4 w-10 h-10 rounded-full bg-red-100 lg:h-12 lg:w-12 dark:bg-red-900">
                 <Icon name="tabler:axe" class="text-red-800 dark:text-red-300 size-6"/>
               </div>
               <h3 class="mb-2 text-xl font-bold dark:text-white">New Installs</h3>
               <p class="text-stone-500 dark:text-stone-400">Bring fresh life to your home. We'll install the material and finish of your choice.</p>
           </div>
           <div>
-              <div class="flex justify-center items-center mb-4 w-10 h-10 rounded-full bg-red-100 lg:h-12 lg:w-12 dark:bg-red-900">
+              <div class="max-sm:mx-auto flex justify-center items-center mb-4 w-10 h-10 rounded-full bg-red-100 lg:h-12 lg:w-12 dark:bg-red-900">
                 <Icon name="tabler:paint" class="text-red-800 dark:text-red-300 size-6 -ml-1"/>
               </div>
               <h3 class="mb-2 text-xl font-bold dark:text-white">Refinishing</h3>
               <p class="text-stone-500 dark:text-stone-400">Whether you need a maintenance coat or a full re-sand, we can make your existing floors look good as new <u>without</u> making a huge mess.</p>
           </div>
           <div>
-              <div class="flex justify-center items-center mb-4 w-10 h-10 rounded-full bg-red-100 lg:h-12 lg:w-12 dark:bg-red-900">
+              <div class="max-sm:mx-auto flex justify-center items-center mb-4 w-10 h-10 rounded-full bg-red-100 lg:h-12 lg:w-12 dark:bg-red-900">
                 <Icon name="tabler:bandage" class="text-red-800 dark:text-red-300 size-6"/>
               </div>
               <h3 class="mb-2 text-xl font-bold dark:text-white">Repairs</h3>
               <p class="text-stone-500 dark:text-stone-400">Water damage? Damaged pre-finished hardwood floors? We can fix your hardwood floors. You won't even know we were there.</p>
           </div>
           <div>
-              <div class="flex justify-center items-center mb-4 w-10 h-10 rounded-full bg-red-100 lg:h-12 lg:w-12 dark:bg-red-900">
+              <div class="max-sm:mx-auto flex justify-center items-center mb-4 w-10 h-10 rounded-full bg-red-100 lg:h-12 lg:w-12 dark:bg-red-900">
                 <Icon name="tabler:playlist-add" class="text-red-800 dark:text-red-300 size-6 -ml-1"/>
               </div>
               <h3 class="mb-2 text-xl font-bold dark:text-white">Additions & Extensions</h3>
               <p class="text-stone-500 dark:text-stone-400">Want to extend your kitchen to the entire floor? We can lace-in new installs with existing, making a seamless transition from old to new.</p>
           </div>
           <div>
-              <div class="flex justify-center items-center mb-4 w-10 h-10 rounded-full bg-red-100 lg:h-12 lg:w-12 dark:bg-red-900">
+              <div class="max-sm:mx-auto flex justify-center items-center mb-4 w-10 h-10 rounded-full bg-red-100 lg:h-12 lg:w-12 dark:bg-red-900">
                 <Icon name="tabler:home-plus" class="text-red-800 dark:text-red-300 size-6"/>
               </div>
               <h3 class="mb-2 text-xl font-bold dark:text-white">New Construction</h3>
               <p class="text-stone-500 dark:text-stone-400">We've worked with plenty of builders on new and custom homes.</p>
           </div>
           <div>
-              <div class="flex justify-center items-center mb-4 w-10 h-10 rounded-full bg-red-100 lg:h-12 lg:w-12 dark:bg-red-900">
+              <div class="max-sm:mx-auto flex justify-center items-center mb-4 w-10 h-10 rounded-full bg-red-100 lg:h-12 lg:w-12 dark:bg-red-900">
                 <Icon name="tabler:background" class="text-red-800 dark:text-red-300 size-6"/>
               </div>
               <h3 class="mb-2 text-xl font-bold dark:text-white">Custom Inlays</h3>
