--- a/src/components/ui/CallToAction.astro
+++ b/src/components/ui/CallToAction.astro
@@ -9,7 +9,7 @@ import { SITE_PHONE, SITE_PHONE_HREF } from 'src/consts'
 <section class="max-lg:container bg-white dark:bg-red-950 bg-blend-overlay bg-cover shadow-xl dark:shadow-red-800/10 lg:-mb-20 rounded-3xl mt-12 z-10 inline-block relative overflow-hidden">
   <div class="py-8 px-4 sm:py-16 lg:px-20 relative">
     <div id="bg" class="absolute inset-0 top-auto -left-10 z-0 stroke-red-100 dark:stroke-red-900">
-      <svg xmlns="http://www.w3.org/2000/svg" class="w-screen" viewBox="0 0 1250 586" fill="none">
+      <svg xmlns="http://www.w3.org/2000/svg" class="w-screen max-sm:w-[150vw]" viewBox="0 0 1250 586" fill="none">
       <g clip-path="url(#clip0_60_16439)">
       <path d="M19.43 557.924C305.587 377.185 514.434 675.231 739.877 448.31C863.127 324.252 903.348 62.5565 1233.19 30.0321" stroke="inherit" stroke-width="18" stroke-linecap="round"/>
       </g></svg>
