--- a/src/components/ui/CallToAction.astro
+++ b/src/components/ui/CallToAction.astro
@@ -1,29 +1,62 @@
 ---
 // Components
-import Button from '../../components/ui/Button.astro'
+import Button from '../../components/ui/Button.astro';
 
 // Data
-import { SITE_PHONE, SITE_PHONE_HREF } from 'src/consts'
+import { SITE_PHONE, SITE_PHONE_HREF } from 'src/consts';
 ---
+
 <div class="text-center">
-<section class="max-lg:container bg-white dark:bg-red-950 bg-blend-overlay bg-cover shadow-xl dark:shadow-red-800/10 lg:-mb-20 rounded-3xl mt-12 z-10 inline-block relative overflow-hidden">
-  <div class="py-8 px-4 sm:py-16 lg:px-20 relative">
-    <div id="bg" class="absolute inset-0 top-auto -left-10 z-0 stroke-red-100 dark:stroke-red-900">
-      <svg xmlns="http://www.w3.org/2000/svg" class="w-screen max-sm:w-[150vw]" viewBox="0 0 1250 586" fill="none">
-      <g clip-path="url(#clip0_60_16439)">
-      <path d="M19.43 557.924C305.587 377.185 514.434 675.231 739.877 448.31C863.127 324.252 903.348 62.5565 1233.19 30.0321" stroke="inherit" stroke-width="18" stroke-linecap="round"/>
-      </g></svg>
-    </div>
-    <div class="text-center z-10 relative">
-      <h2 class="mb-10 text-4xl tracking-tight font-extrabold text-stone-900 dark:text-white">Get a quote today for your project.</h2>
-      <div class="flex justify-around">
-        <div>
-        <h3>Call us</h3>
-        <p><a href={SITE_PHONE_HREF} class="text-2xl font-bold text-red-800 dark:text-amber-100">{SITE_PHONE}</a></p>
+  <section
+    class="relative z-10 mt-12 inline-block overflow-hidden rounded-3xl bg-yellow-400 bg-cover bg-blend-overlay shadow-xl max-lg:container dark:bg-red-950 dark:shadow-red-800/10 lg:-mb-20"
+  >
+    <div class="relative px-4 py-10 sm:py-16 lg:px-20">
+      <div
+        id="bg"
+        class="absolute inset-0 -left-10 top-auto z-0 stroke-yellow-300 dark:stroke-red-900"
+      >
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="w-screen max-sm:w-[150vw]"
+          viewBox="0 0 1250 586"
+          fill="none"
+        >
+          <g clip-path="url(#clip0_60_16439)">
+            <path
+              d="M19.43 557.924C305.587 377.185 514.434 675.231 739.877 448.31C863.127 324.252 903.348 62.5565 1233.19 30.0321"
+              stroke="inherit"
+              stroke-width="18"
+              stroke-linecap="round"></path>
+          </g></svg
+        >
+      </div>
+      <div class="relative z-10 text-center">
+        <h2
+          class="mb-10 text-4xl font-extrabold tracking-tight text-stone-900 dark:text-white"
+        >
+          Get a quote today for your project.
+        </h2>
+        <div
+          class="flex flex-col items-center justify-around gap-6 md:flex-row"
+        >
+          <div>
+            <h3>Call us</h3>
+            <p>
+              <a
+                href={SITE_PHONE_HREF}
+                class="text-2xl font-bold text-red-800 dark:text-amber-100"
+                >{SITE_PHONE}</a
+              >
+            </p>
+          </div>
+          <Button
+            text="Schedule your free estimate"
+            style="white"
+            href="/contact"
+            icon={{ name: 'tabler:arrow-right', side: 'right' }}
+          />
         </div>
-        <Button text='Schedule your free estimate' href="/contact" style='primary' icon={{name: "tabler:arrow-right", side: "right"}} />
       </div>
     </div>
-  </div>
-</section>
+  </section>
 </div>
