--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -2,41 +2,32 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer base {
-
-  .bg-primary {
-    background-color: #b45309;
-  }
-
-  .bg-secondary {
-    background-color: #4d7c0f;
-  }
-
-}
-
-
 @layer components {
   .btn {
-    @apply inline-flex justify-center items-center font-medium text-center text-base transition py-4 px-6 md:px-8 ease-in duration-200 cursor-pointer focus:outline-offset-4 focus:outline-4 focus:outline-amber-700;
+    @apply font-bold inline-flex justify-center items-center text-center text-base transition py-4 px-6 md:px-8 ease-in duration-200 cursor-pointer rounded-xl focus:outline-offset-4 focus:outline-4 focus:outline-amber-700;
   }
 
   .btn-primary {
-    @apply btn font-semibold bg-primary text-white hover:bg-secondary hover:text-white dark:text-white dark:bg-primary dark:hover:bg-secondary bg-gradient-to-br from-orange-600 to-red-800 hover:from-red-700 hover:to-red-950 active:bg-gradient-to-bl;
+    @apply btn text-white bg-red-800 hover:bg-red-700 active:bg-red-900 hover:text-white dark:text-white bg-gradient-to-br;
   }
 
   .btn-secondary {
-    @apply btn text-base font-medium text-center bg-white/50 text-stone-900 border-2 border-stone-500 hover:bg-stone-300 focus:ring-4 focus:ring-stone-100 dark:text-white dark:border-stone-700 dark:hover:bg-stone-700 dark:text-black dark:focus:ring-stone-800;
+    @apply btn bg-yellow-500 text-stone-900 hover:bg-yellow-400 active:bg-yellow-600 focus:ring-4 focus:ring-stone-100 dark:focus:ring-stone-800;
   }
 
-  .btn-tertiary {
-    @apply btn border-none shadow-none text-muted hover:text-stone-900 dark:text-stone-400 dark:hover:text-white;
+  /* .btn-white {
+    @apply btn bg-yellow-500 text-stone-900 hover:bg-yellow-400 active:bg-yellow-600 focus:ring-4 focus:ring-stone-100 dark:focus:ring-stone-800;
+  } */
+
+  .btn-white {
+    @apply py-2 px-5 bg-violet-500 text-white font-semibold rounded-full shadow-md hover:bg-violet-700 focus:outline-none focus:ring focus:ring-violet-400 focus:ring-opacity-75;
   }
 
 }
 
 @layer base {
   h1 {
-    @apply text-4xl font-extrabold
+    @apply text-4xl font-extrabold;
   }
 
   h2 {
