about page dark colors

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,21 +3,56 @@
 import BaseLayout from '../layouts/BaseLayout.astro';
 
 // Components
-import CTA from "../components/ui/CallToAction.astro"
+import CTA from '../components/ui/CallToAction.astro';
 ---
 
 <BaseLayout>
-  <article class="container mx-auto prose prose-base lg:prose-xl prose-stone">
+  <article
+    class="container prose prose-base prose-stone mx-auto lg:prose-xl *:dark:text-white"
+  >
     <h1>About Avalanche Hardwood Floors</h1>
-    <p>Where quality meets craftsmanship in the heart of Colorado Springs. For over two decades, we've been dedicated to honest, quality work at affordable prices. Founded by Rick Mutzebaugh, our journey began with a passion for woodwork and an opportunity to start a business to deliver quality and transparency where other companies in the industry were lacking.</p>
-    <blockquote class="text-2xl text-red-800 dark:text-red-600">With us, you're getting peace of mind.</blockquote>
+    <p>
+      Where quality meets craftsmanship in the heart of Colorado Springs. For
+      over two decades, we've been dedicated to honest, quality work at
+      affordable prices. Founded by Rick Mutzebaugh, our journey began with a
+      passion for woodwork and an opportunity to start a business to deliver
+      quality and transparency where other companies in the industry were
+      lacking.
+    </p>
+    <blockquote class="text-2xl text-red-800 dark:text-red-600">
+      With us, you're getting peace of mind.
+    </blockquote>
     <h2>Our Values</h2>
-    <p>At Avalanche Hardwood Floors, we pride ourselves on being more than just a flooring company. We're your partners in enhancing the beauty and value of your home or business. Our core values of friendliness, personability, and trustworthiness are woven into every interaction and project we undertake. When you choose us, <b>you're not just getting a service – you're getting peace of mind knowing the job is done right every time.</b></p>
+    <p>
+      At Avalanche Hardwood Floors, we pride ourselves on being more than just a
+      flooring company. We're your partners in enhancing the beauty and value of
+      your home or business. Our core values of friendliness, personability, and
+      trustworthiness are woven into every interaction and project we undertake.
+      When you choose us, <b
+        >you're not just getting a service – you're getting peace of mind
+        knowing the job is done right every time.</b
+      >
+    </p>
     <h2>Uncompromising Quality</h2>
-    <p>Quality is the cornerstone of everything we do. From the selection of premium materials to the meticulous attention to detail in every installation, sanding, refinishing, repair, or addition.</p>
-    <p>A contractor once hired us for a VIP and said, "treat this like it's your house." We said, "No - we will treat it like it's <i>not</i> our house." We give everyone the VIP treatment, whether it's a 10,000sf house in the Broadmoor, or a small repair in a condo. Everyone gets our best.</p>
+    <p>
+      Quality is the cornerstone of everything we do. From the selection of
+      premium materials to the meticulous attention to detail in every
+      installation, sanding, refinishing, repair, or addition.
+    </p>
+    <p>
+      A contractor once hired us for a VIP and said, "treat this like it's your
+      house." We said, "No - we will treat it like it's <i>not</i> our house." We
+      give everyone the VIP treatment, whether it's a 10,000sf house in the Broadmoor,
+      or a small repair in a condo. Everyone gets our best.
+    </p>
     <h2>Customer Satisfaction Guaranteed</h2>
-    <p>At Avalanche Hardwood Floors, your satisfaction is our top priority. We understand that investing in your home or business is a significant decision, which is why we go above and beyond to exceed your expectations. Should you ever encounter any issues, you can give the owner Rick a call and we'll do everything we can to make it right at no cost to you.</p>
+    <p>
+      At Avalanche Hardwood Floors, your satisfaction is our top priority. We
+      understand that investing in your home or business is a significant
+      decision, which is why we go above and beyond to exceed your expectations.
+      Should you ever encounter any issues, you can give the owner Rick a call
+      and we'll do everything we can to make it right at no cost to you.
+    </p>
   </article>
   <CTA />
 </BaseLayout>
