--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+.btn-white {
+  @apply btn bg-white text-stone-900 hover:bg-yellow-400 active:bg-yellow-600 focus:ring-4 focus:ring-stone-100 dark:focus:ring-stone-800;
+}
+
 @layer components {
   .btn {
     @apply font-bold inline-flex justify-center items-center text-center text-base transition py-4 px-6 md:px-8 ease-in duration-200 cursor-pointer rounded-xl focus:outline-offset-4 focus:outline-4 focus:outline-amber-700;
@@ -13,14 +17,6 @@
 
   .btn-secondary {
     @apply btn bg-yellow-500 text-stone-900 hover:bg-yellow-400 active:bg-yellow-600 focus:ring-4 focus:ring-stone-100 dark:focus:ring-stone-800;
-  }
-
-  /* .btn-white {
-    @apply btn bg-yellow-500 text-stone-900 hover:bg-yellow-400 active:bg-yellow-600 focus:ring-4 focus:ring-stone-100 dark:focus:ring-stone-800;
-  } */
-
-  .btn-white {
-    @apply py-2 px-5 bg-violet-500 text-white font-semibold rounded-full shadow-md hover:bg-violet-700 focus:outline-none focus:ring focus:ring-violet-400 focus:ring-opacity-75;
   }
 
 }
