--- a/src/components/ui/Button.astro
+++ b/src/components/ui/Button.astro
@@ -5,7 +5,7 @@ import { Icon } from 'astro-icon/components';
 interface Props {
   text: string;
   href: string;
-  style?: 'primary' | 'secondary' | 'white';
+  style?: string;
   icon?: {
     name: string;
     side: 'left' | 'right';
