--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -14,11 +14,11 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
     <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
   </head>
   <body
-    class="bg-stone-100 text-stone-900 dark:bg-stone-900 dark:text-stone-100 transition-colors"
+    class="bg-stone-100 text-stone-900 transition-colors dark:bg-stone-900 dark:text-stone-100"
   >
     <a href="#main-content" class="sr-only">Skip to content</a>
     <Header />
-    <main id="#main-content">
+    <main id="#main-content" class="max-md:p-5">
       <slot>
         <h1>Under construction</h1>
         <p>No content found just yet...</p>
