--- a/src/components/content/HomeServices2.astro
+++ b/src/components/content/HomeServices2.astro
@@ -1,6 +1,6 @@
 ---
+// Components
 import { Icon } from "astro-icon/components";
-
 ---
 <section class="bg-white dark:bg-stone-900">
   <div class="py-8 px-4 mx-auto max-w-screen-xl sm:py-16 lg:px-6">
