--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -41,9 +41,10 @@ import CTA from '../components/ui/CallToAction.astro';
     </p>
     <p>
       A contractor once hired us for a VIP and said, "treat this like it's your
-      house." We said, "No - we will treat it like it's <i>not</i> our house." We
-      give everyone the VIP treatment, whether it's a 10,000sf house in the Broadmoor,
-      or a small repair in a condo. Everyone gets our best.
+      house." We said, "No - we will treat it like it's <i>not</i> our house. We
+      will treat it like it's <i>their</i> house." We give everyone the VIP treatment,
+      whether it's a 10,000sf house in the Broadmoor, or a small repair in a condo.
+      Everyone gets our best.
     </p>
     <h2>Customer Satisfaction Guaranteed</h2>
     <p>
@@ -52,6 +53,25 @@ import CTA from '../components/ui/CallToAction.astro';
       decision, which is why we go above and beyond to exceed your expectations.
       Should you ever encounter any issues, you can give the owner Rick a call
       and we'll do everything we can to make it right at no cost to you.
+    </p>
+    <h2>One year warranty</h2>
+    <p>
+      We stand by our work. In Colorado, hardwood floors can experience a lot of
+      movement, expansion, and contraction with the changing of the seasons.
+      Hardwood flooring is a living product, and with poor installation, it can
+      shift quite a bit - especially in historic homes - and leave gaps or even
+      void the manufacturers warranty.
+    </p>
+    <p>
+      We strictly adhere to each manufacturer's installation guidelines to
+      ensure you're covered by us and them.
+    </p>
+    <p>
+      On top of any warranties the manufacturers provide, we will fix any issues
+      related to our stains, finish, or installations that may appear at no cost
+      to you. In the event that a prefinished or engineered product is
+      defective, we will work with the manufacturer on your behalf to file a
+      warranty claim.
     </p>
   </article>
   <CTA />
