--- a/src/components/content/HomeAbout.astro
+++ b/src/components/content/HomeAbout.astro
@@ -1,14 +1,17 @@
 ---
-import Button from "@components/ui/Button.astro"
+import Button from '@components/ui/Button.astro';
 ---
-<section class="dark:bg-stone-950 py-12">
-  <div class="container mx-auto px-10 my-20 sm:flex">
+
+<section class="py-12 dark:bg-stone-950">
+  <div class="container mx-auto my-20 px-10 sm:flex">
     <div class="sm:w-2/3">
       <h2 class="text-xl font-extrabold">About us</h2>
-      <p class="text-4xl font-bold mb-6">We’ve been working in the industry for 20 years</p>
+      <p class="mb-6 text-4xl font-bold">
+        We’ve been working in the industry for over 20 years.
+      </p>
     </div>
     <div class="ml-auto">
-      <Button text="About us" href="/about" classes="btn-secondary"></Button>
+      <Button text="About us" href="/about" classes="btn-secondary" />
     </div>
   </div>
 </section>
