--- a/src/components/content/HomeHero.astro
+++ b/src/components/content/HomeHero.astro
@@ -1,19 +1,40 @@
 ---
 // Components
-import Button from "@components/ui/Button.astro"
+import Button from '@components/ui/Button.astro';
 
 // Content
-import { getImage } from "astro:assets"
-import kitchen from "../../assets/images/kitchen1.jpg"
-const optimizedBackgroundImage = await getImage({ src: kitchen, width:1000, })
+import { getImage } from 'astro:assets';
+import kitchen from '../../assets/images/kitchen1.jpg';
+const optimizedBackgroundImage = await getImage({ src: kitchen, width: 1000 });
 ---
-<section class="container rounded-2xl mx-auto mb-12 bg-stone-300 dark:bg-stone-900 bg-cover bg-bottom bg-blend-overlay" style={`background-image: url('${optimizedBackgroundImage.src}')`}>
-    <div class="py-10 px-4 mx-auto max-w-screen-xl text-center lg:py-40 lg:px-20">
-        <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-stone-900 md:text-5xl lg:text-6xl dark:text-white">Hardwood floors done right. Guaranteed.</h1>
-        <p class="mb-8 text-xl font-semibold text-black lg:text-2xl sm:px-16 xl:px-48 dark:text-stone-400">Here at Avalanche Hardwood Floors we focus on quality and trust. Give us a call for a free, no pressure estimate to help get you pointed in the right direction.</p>
-        <div class="mb-8 lg:mb-16 space-y-4 sm:flex-row sm:justify-center sm:space-y-0 sm:space-x-4">
-            <Button text="Get a quote" classes="btn-primary" href='/contact' icon={{name: "tabler:arrow-right", side: "right"}} ></Button>
-            <Button text="View projects" classes="btn-secondary" href='/gallery' ></Button>
-        </div>
+
+<section
+  class="container mx-auto mb-12 rounded-2xl bg-stone-200 bg-cover bg-bottom bg-blend-overlay dark:bg-stone-900"
+  style={`background-image: url('${optimizedBackgroundImage.src}')`}
+>
+  <div class="mx-auto max-w-screen-xl px-4 py-10 text-center lg:px-20 lg:py-40">
+    <h1
+      class="mb-4 text-4xl font-extrabold leading-none tracking-tight text-stone-900 dark:text-white md:text-5xl lg:text-6xl"
+    >
+      Hardwood floors done right. Guaranteed.
+    </h1>
+    <p
+      class="mb-8 text-xl font-semibold text-black dark:text-stone-400 sm:px-16 lg:text-2xl xl:px-48"
+    >
+      At Avalanche Hardwood Floors we focus on quality and trust. Give us a call
+      for a free, no pressure estimate to help get you pointed in the right
+      direction.
+    </p>
+    <div
+      class="mb-8 space-y-4 sm:flex-row sm:justify-center sm:space-x-4 sm:space-y-0 lg:mb-16"
+    >
+      <Button
+        text="Get a quote"
+        classes="btn-primary"
+        href="/contact"
+        icon={{ name: 'tabler:arrow-right', side: 'right' }}
+      />
+      <Button text="View projects" classes="btn-secondary" href="/gallery" />
     </div>
+  </div>
 </section>
