--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -1,70 +1,156 @@
 ---
+import Button from '@components/ui/Button.astro';
 import BaseLayout from '../layouts/BaseLayout.astro';
+import { Icon } from 'astro-icon/components';
 ---
 
 <BaseLayout>
-  <article class="container mx-auto lg:px-16">
-    <h1>Our Services</h1>
-  <p>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-    tempor incididunt ut labore et dolore magna aliqua. Vitae ultricies leo
-    integer malesuada nunc vel risus commodo viverra. Adipiscing enim eu turpis
-    egestas pretium. Euismod elementum nisi quis eleifend quam adipiscing. In
-    hac habitasse platea dictumst vestibulum. Sagittis purus sit amet volutpat.
-    Netus et malesuada fames ac turpis egestas. Eget magna fermentum iaculis eu
-    non diam phasellus vestibulum lorem. Varius sit amet mattis vulputate enim.
-    Habitasse platea dictumst quisque sagittis. Integer quis auctor elit sed
-    vulputate mi. Dictumst quisque sagittis purus sit amet.
-  </p>
+  <section
+    class="container mx-auto mb-12 rounded-2xl bg-stone-300 bg-cover bg-bottom bg-blend-overlay dark:bg-stone-900"
+  >
+    <div
+      class="mx-auto max-w-screen-xl px-4 py-10 text-center lg:px-20 lg:py-40"
+    >
+      <h1
+        class="mb-4 text-4xl font-extrabold leading-none tracking-tight text-stone-900 dark:text-white md:text-5xl lg:text-6xl"
+      >
+        A wide range of wood floor services
+      </h1>
+      <p
+        class="mb-8 text-xl text-black dark:text-stone-400 sm:px-16 lg:text-2xl xl:px-48"
+      >
+        When it comes to hardwood floors, we can do it all. If you have any
+        questions, give us a call and we'll come over to discuss your project
+        with a no-pressure conversation.
+      </p>
+      <div
+        class="mb-8 space-y-4 sm:flex-row sm:justify-center sm:space-x-4 sm:space-y-0 lg:mb-16"
+      >
+        <Button
+          text="Get a quote"
+          classes="btn-primary"
+          href="/contact"
+          icon={{ name: 'tabler:arrow-right', side: 'right' }}
+        />
+      </div>
+    </div>
+  </section>
 
-  <p>
-    Morbi tristique senectus et netus. Id semper risus in hendrerit gravida
-    rutrum quisque non tellus. Habitasse platea dictumst quisque sagittis purus
-    sit amet. Tellus molestie nunc non blandit massa. Cursus vitae congue mauris
-    rhoncus. Accumsan tortor posuere ac ut. Fringilla urna porttitor rhoncus
-    dolor. Elit ullamcorper dignissim cras tincidunt lobortis. In cursus turpis
-    massa tincidunt dui ut ornare lectus. Integer feugiat scelerisque varius
-    morbi enim nunc. Bibendum neque egestas congue quisque egestas diam. Cras
-    ornare arcu dui vivamus arcu felis bibendum. Dignissim suspendisse in est
-    ante in nibh mauris. Sed tempus urna et pharetra pharetra massa massa
-    ultricies mi.
-  </p>
-
-  <p>
-    Mollis nunc sed id semper risus in. Convallis a cras semper auctor neque.
-    Diam sit amet nisl suscipit. Lacus viverra vitae congue eu consequat ac
-    felis donec. Egestas integer eget aliquet nibh praesent tristique magna sit
-    amet. Eget magna fermentum iaculis eu non diam. In vitae turpis massa sed
-    elementum. Tristique et egestas quis ipsum suspendisse ultrices. Eget lorem
-    dolor sed viverra ipsum. Vel turpis nunc eget lorem dolor sed viverra.
-    Posuere ac ut consequat semper viverra nam. Laoreet suspendisse interdum
-    consectetur libero id faucibus. Diam phasellus vestibulum lorem sed risus
-    ultricies tristique. Rhoncus dolor purus non enim praesent elementum
-    facilisis. Ultrices tincidunt arcu non sodales neque. Tempus egestas sed sed
-    risus pretium quam vulputate. Viverra suspendisse potenti nullam ac tortor
-    vitae purus faucibus ornare. Fringilla urna porttitor rhoncus dolor purus
-    non. Amet dictum sit amet justo donec enim.
-  </p>
-
-  <p>
-    Mattis ullamcorper velit sed ullamcorper morbi tincidunt. Tortor posuere ac
-    ut consequat semper viverra. Tellus mauris a diam maecenas sed enim ut sem
-    viverra. Venenatis urna cursus eget nunc scelerisque viverra mauris in. Arcu
-    ac tortor dignissim convallis aenean et tortor at. Curabitur gravida arcu ac
-    tortor dignissim convallis aenean et tortor. Egestas tellus rutrum tellus
-    pellentesque eu. Fusce ut placerat orci nulla pellentesque dignissim enim
-    sit amet. Ut enim blandit volutpat maecenas volutpat blandit aliquam etiam.
-    Id donec ultrices tincidunt arcu. Id cursus metus aliquam eleifend mi.
-  </p>
-
-  <p>
-    Tempus quam pellentesque nec nam aliquam sem. Risus at ultrices mi tempus
-    imperdiet. Id porta nibh venenatis cras sed felis eget velit. Ipsum a arcu
-    cursus vitae. Facilisis magna etiam tempor orci eu lobortis elementum.
-    Tincidunt dui ut ornare lectus sit. Quisque non tellus orci ac. Blandit
-    libero volutpat sed cras. Nec tincidunt praesent semper feugiat nibh sed
-    pulvinar proin gravida. Egestas integer eget aliquet nibh praesent tristique
-    magna.
-  </p>
-  </article>
+  <section class="bg-white dark:bg-stone-900">
+    <div class="mx-auto max-w-screen-xl px-4 py-8 sm:py-16 lg:px-6">
+      <div class="mb-8 max-w-screen-md lg:mb-16">
+        <h2
+          class="mb-4 text-4xl font-extrabold tracking-tight text-stone-900 dark:text-white"
+        >
+          Trusted services.
+        </h2>
+        <p class="text-stone-500 dark:text-stone-400 sm:text-xl">
+          We've done it all, from the largest luxury homes in the city to condos
+          and everything in between. If designers in <a
+            href="https://springsparade.com/web/"
+            target="_blank"
+            rel="noreferrer noopener"
+            class="text-red-800 underline hover:text-red-600"
+            >the Parade of Homes</a
+          > trust us, you can too.
+        </p>
+      </div>
+      <div class="flex flex-col gap-12 max-sm:text-center">
+        <div>
+          <div
+            class="mb-4 flex h-10 w-10 items-center justify-center rounded-full bg-red-100 dark:bg-red-900 max-sm:mx-auto lg:h-12 lg:w-12"
+          >
+            <Icon
+              name="tabler:axe"
+              class="size-6 text-red-800 dark:text-red-300"
+            />
+          </div>
+          <h3 class="mb-2 text-xl font-bold dark:text-white">New Installs</h3>
+          <p class="text-stone-500 dark:text-stone-400">
+            Bring fresh life to your home. We'll install the material and finish
+            of your choice.
+          </p>
+        </div>
+        <div>
+          <div
+            class="mb-4 flex h-10 w-10 items-center justify-center rounded-full bg-red-100 dark:bg-red-900 max-sm:mx-auto lg:h-12 lg:w-12"
+          >
+            <Icon
+              name="tabler:paint"
+              class="-ml-1 size-6 text-red-800 dark:text-red-300"
+            />
+          </div>
+          <h3 class="mb-2 text-xl font-bold dark:text-white">Refinishing</h3>
+          <p class="text-stone-500 dark:text-stone-400">
+            Whether you need a maintenance coat or a full re-sand, we can make
+            your existing floors look good as new <u>without</u> making a huge mess.
+          </p>
+        </div>
+        <div>
+          <div
+            class="mb-4 flex h-10 w-10 items-center justify-center rounded-full bg-red-100 dark:bg-red-900 max-sm:mx-auto lg:h-12 lg:w-12"
+          >
+            <Icon
+              name="tabler:bandage"
+              class="size-6 text-red-800 dark:text-red-300"
+            />
+          </div>
+          <h3 class="mb-2 text-xl font-bold dark:text-white">Repairs</h3>
+          <p class="text-stone-500 dark:text-stone-400">
+            Water damage? Damaged pre-finished hardwood floors? We can fix your
+            hardwood floors. You won't even know we were there.
+          </p>
+        </div>
+        <div>
+          <div
+            class="mb-4 flex h-10 w-10 items-center justify-center rounded-full bg-red-100 dark:bg-red-900 max-sm:mx-auto lg:h-12 lg:w-12"
+          >
+            <Icon
+              name="tabler:playlist-add"
+              class="-ml-1 size-6 text-red-800 dark:text-red-300"
+            />
+          </div>
+          <h3 class="mb-2 text-xl font-bold dark:text-white">
+            Additions & Extensions
+          </h3>
+          <p class="text-stone-500 dark:text-stone-400">
+            Want to extend your kitchen to the entire floor? We can lace-in new
+            installs with existing, making a seamless transition from old to
+            new.
+          </p>
+        </div>
+        <div>
+          <div
+            class="mb-4 flex h-10 w-10 items-center justify-center rounded-full bg-red-100 dark:bg-red-900 max-sm:mx-auto lg:h-12 lg:w-12"
+          >
+            <Icon
+              name="tabler:home-plus"
+              class="size-6 text-red-800 dark:text-red-300"
+            />
+          </div>
+          <h3 class="mb-2 text-xl font-bold dark:text-white">
+            New Construction
+          </h3>
+          <p class="text-stone-500 dark:text-stone-400">
+            We've worked with plenty of builders on new and custom homes.
+          </p>
+        </div>
+        <div>
+          <div
+            class="mb-4 flex h-10 w-10 items-center justify-center rounded-full bg-red-100 dark:bg-red-900 max-sm:mx-auto lg:h-12 lg:w-12"
+          >
+            <Icon
+              name="tabler:background"
+              class="size-6 text-red-800 dark:text-red-300"
+            />
+          </div>
+          <h3 class="mb-2 text-xl font-bold dark:text-white">Custom Inlays</h3>
+          <p class="text-stone-500 dark:text-stone-400">
+            If you have a special decorative elements, like borders or emblems,
+            we can make that happen.
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
 </BaseLayout>
